--- a/xamarin_notes_app/xamarin_notes_app/xamarin_notes_app/Views/AddNewTask.xaml
+++ b/xamarin_notes_app/xamarin_notes_app/xamarin_notes_app/Views/AddNewTask.xaml
@@ -1,17 +1,56 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="xamarin_notes_app.Views.AddNewTask">
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:viewmodels="clr-namespace:xamarin_notes_app.ViewModels" x:DataType="viewmodels:AddTaskViewModel"
+             x:Class="xamarin_notes_app.Views.AddNewTask"
+             xmlns:customRenderer="clr-namespace:xamarin_notes_app.Helper.CustomEntry">
 
     <NavigationPage.TitleView>
         <Label Text="{StaticResource AddTaskScreenTitle}" FontSize="30" TextColor="White" />
     </NavigationPage.TitleView>
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <Style x:Key="LabelTextStyle" TargetType="Label">
+                <Setter Property="HorizontalOptions" Value="Center"/>
+                <Setter Property="VerticalOptions" Value="Center"/>
+                <Setter Property="FontAttributes" Value="Bold"/>
+                <Setter Property="FontSize" Value="20" />
+                <Setter Property="TextColor" Value="Black"/>
+                <Setter Property="Margin" Value="15,15"/>
+            </Style>
+        </ResourceDictionary>
+    </ContentPage.Resources>
     
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Add New Task Screen"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+        <Grid>
+        <StackLayout Margin="40,40">
+            <Label 
+                Text="{StaticResource EnterTitle}"
+                Style="{StaticResource LabelTextStyle}"
+                />
+            <customRenderer:CustomEntry  x:Name="titleText" VerticalOptions="Start" 
+                                         Text="{Binding Title}" Placeholder="Enter title of task" Margin="0,5" HorizontalTextAlignment="Center"/>
+            <Label 
+                Text="{StaticResource EnterDescription}"
+                Style="{StaticResource LabelTextStyle}"
+                />
+            <customRenderer:CustomEntry  x:Name="descriptionText" VerticalOptions="Start"
+                                         Text="{Binding Description}" HeightRequest="100" Placeholder="Enter description of task" Margin="0,5"  HorizontalTextAlignment="Center"/>
+            <Button x:Name="taskSubmitBtn"
+                    BackgroundColor="Teal"
+                    TextColor="White"
+                    Font="Bold,16"
+                    Command="{Binding AddTask}"
+                    Margin="10,25"
+                    VerticalOptions="Center"
+                    Text="{StaticResource saveBtnText}"/>
         </StackLayout>
+            <ActivityIndicator x:Name="activity"  
+                               IsRunning="{Binding IsLoading}"    
+                               IsVisible="{Binding IsLoading}"  
+                               Color="Blue"  
+                               VerticalOptions="Center"
+                               HorizontalOptions="Center"
+                               BackgroundColor="Transparent"/>
+        </Grid>
     </ContentPage.Content>
 </ContentPage>
