--- a/xamarin_notes_app/xamarin_notes_app/xamarin_notes_app/Views/ProfilePage.xaml
+++ b/xamarin_notes_app/xamarin_notes_app/xamarin_notes_app/Views/ProfilePage.xaml
@@ -43,7 +43,7 @@
                        HorizontalOptions="Center"
                        FontSize="Large"  
                        />
-                <Label Text="{Binding taskCount}"
+                <Label Text="{Binding AllTask.Count}"
                        Style="{StaticResource TaskCountStyle}"     
                        />
             </StackLayout>
