--- a/xamarin_notes_app/xamarin_notes_app/xamarin_notes_app/App.xaml
+++ b/xamarin_notes_app/xamarin_notes_app/xamarin_notes_app/App.xaml
@@ -20,7 +20,17 @@
                 <Setter Property="TextColor" Value="Black" />
                 <Setter Property="FontAttributes" Value="Bold"/>
             </Style>
-           
+
+            <Style x:Key="FrameCardViewStyle" TargetType="Frame">
+                <Setter Property="CornerRadius" Value="2" />
+                <Setter Property="Margin" Value="0,5" />
+                <Setter Property="Padding" Value="5" />
+                <Setter Property="HorizontalOptions" Value="FillAndExpand" />
+                <Setter Property="OutlineColor" Value="LightGray" />
+                <Setter Property="BorderColor" Value="LightGray" />
+                <Setter Property="HasShadow" Value="True"/>
+            </Style>
+
         </ResourceDictionary>
     </Application.Resources>
 </Application>
