custom card view

--- a/xamarin_notes_app/xamarin_notes_app/xamarin_notes_app/Views/AddNewTask.xaml
+++ b/xamarin_notes_app/xamarin_notes_app/xamarin_notes_app/Views/AddNewTask.xaml
@@ -52,7 +52,7 @@
                                Color="Blue"  
                                VerticalOptions="Center"
                                HorizontalOptions="Center"
-                               BackgroundColor="Transparent"/>
+                               BackgroundColor="AliceBlue"/>
         </Grid>
     </ContentPage.Content>
 </ContentPage>
