--- a/xamarin_notes_app/xamarin_notes_app/xamarin_notes_app/Views/TaskPage.xaml
+++ b/xamarin_notes_app/xamarin_notes_app/xamarin_notes_app/Views/TaskPage.xaml
@@ -1,10 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:viewmodels="clr-namespace:xamarin_notes_app.ViewModels" 
-             xmlns:model="clr-namespace:xamarin_notes_app.Models"
-             xmlns:views="clr-namespace:xamarin_notes_app.Views" xmlns:templates="clr-namespace:xamarin_notes_app.Helper.Templates"
-             x:DataType="viewmodels:TaskListViewModel"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:views="clr-namespace:xamarin_notes_app.Views"
              x:Class="xamarin_notes_app.Views.TaskPage"   
              >
     <NavigationPage.TitleView>
@@ -29,14 +25,12 @@
             </Grid.ColumnDefinitions>
 
             <CollectionView Grid.Column="1" ItemsSource="{Binding AllTask}">
-               
-
                 <CollectionView.ItemsLayout>
                     <GridItemsLayout VerticalItemSpacing="20" Span="1" Orientation="Vertical"/>
                 </CollectionView.ItemsLayout>
                 <CollectionView.ItemTemplate>
-                    <DataTemplate x:DataType="model:TaskData">
-                        <templates:CardViewTemplate/>
+                    <DataTemplate>
+                        <views:CustomCardView TitleText="{Binding title}" Description="{Binding description}" DateString="{Binding date}"/>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
                 <CollectionView.EmptyView>
