--- a/xamarin_notes_app/xamarin_notes_app/xamarin_notes_app/Views/ProfilePage.xaml
+++ b/xamarin_notes_app/xamarin_notes_app/xamarin_notes_app/Views/ProfilePage.xaml
@@ -1,9 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:viewmodels="clr-namespace:xamarin_notes_app.ViewModels" x:DataType="viewmodels:ProfileViewModel"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
              x:Class="xamarin_notes_app.Views.ProfilePage"
-             xmlns:ic="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin"
-             >
+             xmlns:ic="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin" xmlns:viewmodels="clr-namespace:xamarin_notes_app.ViewModels" x:DataType="viewmodels:ProfileViewModel">
     <NavigationPage.TitleView>
         <Label Text="{StaticResource ProfileScreenTitle}" FontSize="30" TextColor="White" />
     </NavigationPage.TitleView>
@@ -43,7 +42,7 @@
                        HorizontalOptions="Center"
                        FontSize="Large"  
                        />
-                <Label Text="{Binding AllTask.Count}"
+                <Label Text="{Binding taskCounter}"
                        Style="{StaticResource TaskCountStyle}"     
                        />
             </StackLayout>
